import { User } from './user.entity';

import { Repository } from '@/seedwork';

export type UsersRepositoryInterface = Repository<User>;
