// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface Entity {
  id: string;
}
